# LevitateOS

./: .gitignore  .gitmodules  .qemu-session.json  ACORNOS_MIRROING_CHECKLIST.md  AGENTS.md  BEHAVIORS_INVENTORY.md  CLAUDE.md  Cargo.toml  DISTROWATCH_SUBMISSION_EMAIL.md  EYRA_INTEGRATION_COMPLETE.md  Image  LICENSE  LICENSE-MIT  README.md  RELEASE.md  STOP_READ_THEN_ACT.md  SUPPLY_CHAIN.md  TECHNICAL_DEBT.md  TODO.md  actual_behavior_test.txt  actual_boot.txt  build_warnings.txt  build_warnings_clean.txt  build_warnings_final.txt  checkpoints.md  deny.toml  initramfs.cpio  justfile  kernel-development.md  levitate.iso  linker.ld  package.json  run  run-gui.sh  run-pixel6.sh  run-term.sh  run-test.sh  run-vnc.sh  run.sh  rust-toolchain.toml  (+5 more)
cheat-test/: Cargo.toml
cheat-test/src/: lib.rs
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs  main.rs
crates/builder/src/builder/: brush.rs  fedora.rs  glibc.rs  initramfs.rs  kernel.rs  levitate.rs  libraries.rs  linux.rs  mod.rs  qemu.rs  util_linux.rs  vendor.rs
crates/drivers/nvme/: Cargo.toml  README.md
crates/drivers/nvme/src/: lib.rs
crates/drivers/simple-gpu/: Cargo.toml  README.md
crates/drivers/simple-gpu/src/: lib.rs
crates/drivers/virtio-gpu/: Cargo.toml
crates/kernel/: Cargo.toml  README.md  build.rs
crates/kernel/src/: block.rs  gpu.rs  init.rs  input.rs  logger.rs  main.rs  net.rs  terminal.rs  virtio.rs
crates/kernel/src/arch/: mod.rs
crates/kernel/src/boot/: dtb.rs  limine.rs  mod.rs
crates/kernel/src/fs/: ext4.rs  fat.rs  mod.rs  mode.rs  mount.rs  path.rs  pipe.rs
crates/kernel/src/loader/: elf.rs
crates/kernel/src/memory/: mod.rs  user.rs
crates/kernel/src/syscall/: constants.rs  epoll.rs  helpers.rs  mm.rs  mod.rs  process.rs  signal.rs  sync.rs  sys.rs  time.rs  types.rs
crates/kernel/src/task/: fd_table.rs  mod.rs  process.rs  scheduler.rs  thread.rs  user.rs
crates/userspace/eyra/: .gitignore  BEHAVIOR_INVENTORY.md  Cargo.toml  NOSTARTFILES_README.md  README.md  TEST_SUMMARY.md
crates/userspace/eyra/.cargo/: config.toml
crates/userspace/eyra/brush/: Cargo.toml
crates/userspace/eyra/cat/: Cargo.toml
crates/userspace/eyra/cgull-test/: Cargo.toml  build.rs
crates/userspace/eyra/cp/: Cargo.toml
crates/userspace/eyra/echo/: Cargo.toml
crates/userspace/eyra/env/: Cargo.toml
crates/userspace/eyra/eyra-hello/: Cargo.toml  build.rs
crates/userspace/eyra/eyra-test-runner/: Cargo.toml  build.rs
crates/userspace/eyra/false/: Cargo.toml
crates/userspace/eyra/libsyscall-tests/: Cargo.toml  README.md  X86_64_STATUS.md  build.rs
crates/userspace/init/: Cargo.toml  build.rs  linker.ld
crates/userspace/levbox/: Cargo.toml
crates/userspace/libsyscall/: Cargo.toml  README.md
crates/userspace/systest/: Cargo.toml
crates/userspace/ulib/: Cargo.toml  README.md
kernel/: Cargo.toml  README.md  build.rs
kernel/src/: block.rs  console_gpu.rs  cursor.rs  exceptions.rs  gpu.rs  init.rs  input.rs  main.rs  net.rs  repro_boot.s  syscall.rs  terminal.rs  virtio.rs
kernel/src/arch/: mod.rs
kernel/src/boot/: limine.rs  mod.rs  multiboot.rs
kernel/src/fs/: ext4.rs  fat.rs  initramfs.rs  mod.rs  tmpfs.rs
kernel/src/fs/tty/: mod.rs
kernel/src/loader/: elf.rs  mod.rs
kernel/src/memory/: heap.rs  mod.rs  user.rs  vma.rs
kernel/src/syscall/: fs.rs  mm.rs  mod.rs  process.rs  signal.rs  sync.rs  sys.rs  time.rs
kernel/src/task/: fd_table.rs  mod.rs  process.rs  process_table.rs  thread.rs  user.rs  user_mm.rs
levitate-drivers-gpu/: Cargo.toml  README.md
levitate-drivers-gpu/src/: command.rs  device.rs  driver.rs  lib.rs
levitate-drivers-gpu/src/protocol/: commands.rs  formats.rs
levitate-gpu/: Cargo.toml  README.md
levitate-gpu/src/: gpu.rs  lib.rs
levitate-hal/: Cargo.toml  README.md
levitate-hal/src/: console.rs  fdt.rs  gic.rs  interrupts.rs  lib.rs  mmu.rs  timer.rs  uart_pl011.rs  virtio.rs
levitate-hal/src/allocator/: buddy.rs
levitate-virtio/: Cargo.toml  README.md
levitate-virtio/src/: hal.rs  hal_impl.rs  lib.rs  queue.rs  transport.rs
toolchain/libc-levitateos/: .gitignore  Cargo.toml  rust-toolchain.toml
toolchain/libc-levitateos/src/: lib.rs
toolchain/libc-levitateos/test/: hello.c
tools/llm-runner/: Cargo.toml  llm-runner.py  requirements.txt  train-lora.py
tools/llm-runner/src/: main.rs
tools/recart/: Cargo.toml
tools/recart/src/: main.rs
userspace/: Cargo.toml  README.md  linker.ld
userspace/.cargo/: config.toml
userspace/coreutils/: Cargo.toml  build.rs
userspace/eyra-hello/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
userspace/eyra-hello/.cargo/: config.toml
userspace/eyra-hello/src/: main.rs
userspace/hello/: Cargo.toml  README.md  linker.ld
userspace/hello/.cargo/: config.toml
userspace/hello/src/: main.rs
userspace/init/: build.rs  link.ld
userspace/init/src/: main.rs
userspace/levbox/: Cargo.toml  build.rs  link.ld
userspace/libsyscall/: Cargo.toml  README.md
userspace/libsyscall/src/: errno.rs  io.rs  lib.rs  mm.rs  process.rs  sched.rs  signal.rs  sysno.rs
userspace/repro_crash/: README.md  build.rs  link.ld
userspace/repro_crash/src/: main.rs
userspace/shell/: Cargo.toml  build.rs  linker.ld
userspace/shell/src/: main.rs
userspace/systest/: build.rs  link.ld
userspace/ulib/src/: entry.rs  env.rs  fs.rs  lib.rs  panic.rs  time.rs
xtask/: Cargo.toml  README.md
xtask/src/: app.rs  build.rs  calc.rs  clean.rs  config.rs  image.rs  main.rs  qmp.rs  run.rs  vm.rs
xtask/src/cli/: mod.rs  types.rs
xtask/src/disk/: image.rs
xtask/src/qemu/: builder.rs  mod.rs  profile.rs
xtask/src/scripts/: install-arch.sh
xtask/src/support/: mod.rs  preflight.rs  qmp.rs
xtask/src/tasks/: mod.rs
xtask/src/test/: alpine.rs  helpers.rs  mod.rs
xtask/src/tests/: behavior.rs  common.rs  coreutils.rs  debug_tools.rs  eyra.rs  keyboard_input.rs  mod.rs  regression.rs  screenshot_alpine.rs  screenshot_levitate.rs  serial_input.rs  unit.rs
xtask/src/util/: mod.rs  repo.rs  tools_env.rs
xtask/src/vm/: README.md  commands.rs  debug.rs  exec.rs  mod.rs  qmp.rs  session.rs
(+1524 files in other folders)
