[workspace]
resolver = "2"
members = [
    "distro-spec",
    "distro-builder",
    "leviso",
    "AcornOS",
    "IuppiterOS",
    "leviso-elf",
    "tools/recipe",
    "tools/recstrap",
    "tools/recfstab",
    "tools/recchroot",
    "tools/recuki",
    "tools/reciso",
    "tools/recqemu",
    "testing/fsdbg",
    "testing/cheat-guard",
    "testing/cheat-test",
    "testing/install-tests",
    "testing/hardware-compat",
    "testing/rootfs-tests",
]

[workspace.package]
edition = "2021"
