[workspace]
resolver = "2"
members = [
    "distro-spec",
    "distro-contract",
    "distro-builder",
    "leviso",
    "AcornOS",
    "IuppiterOS",
    "leviso-elf",
    "xtask",
    "tools/recipe",
    "tools/recstrap",
    "tools/recfstab",
    "tools/recchroot",
    "tools/recuki",
    "tools/reciso",
    "tools/recart",
    "tools/recab",
    "tools/recqemu",
    "testing/fsdbg",
    "testing/cheat-guard",
    "testing/cheat-test",
    "testing/install-tests",
    "testing/hardware-compat",
    "testing/rootfs-tests",
]

[workspace.package]
edition = "2021"
