[package]
name = "levitate-kernel"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
verbose = []        # Enable verbose boot messages for golden file testing
diskless = []       # TEAM_065: Skip initrd requirement for diskless boot scenarios
multitask-demo = [] # TEAM_071: Enable demo tasks for preemption verification

[dependencies]
levitate-hal = { path = "../levitate-hal" }
levitate-utils = { path = "../levitate-utils" }
levitate-gpu = { path = "../levitate-gpu" }
levitate-terminal = { path = "../levitate-terminal" }
linked_list_allocator = "0.10.5"
virtio-drivers = "0.12"
embedded-graphics = "0.8.1"
log = "0.4"
embedded-sdmmc = { version = "0.9", default-features = false }
ext4-view = { version = "0.9", default-features = false }
bitflags = "2.10.0"

