[package]
name = "levitate-kernel"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
verbose = []        # Enable verbose boot messages for golden file testing
diskless = []       # TEAM_065: Skip initrd requirement for diskless boot scenarios
multitask-demo = [] # TEAM_071: Enable demo tasks for preemption verification

[dependencies]
levitate-hal = { path = "../levitate-hal" }
levitate-utils = { path = "../levitate-utils" }
# TEAM_141: Removed hal-impl feature - committing to virtio-drivers (Option A)
levitate-virtio = { path = "../levitate-virtio" }
levitate-terminal = { path = "../levitate-terminal" }
# TEAM_114: PCI and GPU as separate crates
levitate-pci = { path = "../levitate-pci" }
levitate-gpu = { path = "../levitate-gpu" }
linked_list_allocator = "0.10.5"
# TEAM_141: Use workspace dependencies for version consistency
virtio-drivers.workspace = true
embedded-graphics.workspace = true
log = "0.4"
embedded-sdmmc = { version = "0.9", default-features = false }
ext4-view = { version = "0.9", default-features = false }
bitflags.workspace = true
aarch64-cpu.workspace = true

