[package]
name = "levitate-kernel"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
verbose = []        # Enable verbose boot messages for golden file testing
diskless = []       # TEAM_065: Skip initrd requirement for diskless boot scenarios
multitask-demo = [] # TEAM_071: Enable demo tasks for preemption verification

[dependencies]
los_hal = { path = "../crates/hal" }
los_utils = { path = "../crates/utils" }
los_error = { path = "../crates/error" }
los_virtio = { path = "../crates/virtio" }
los_term = { path = "../crates/term" }
los_pci = { path = "../crates/pci" }
los_gpu = { path = "../crates/gpu" }
linked_list_allocator = "0.10.5"
# TEAM_141: Use workspace dependencies for version consistency
virtio-drivers.workspace = true
embedded-graphics.workspace = true
log = "0.4"
embedded-sdmmc = { version = "0.9", default-features = false }
ext4-view = { version = "0.9", default-features = false }
bitflags.workspace = true
aarch64-cpu.workspace = true

[build-dependencies]
cc = "1.0"
