[package]
name = "levitate-gpu"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
levitate-hal = { path = "../levitate-hal" }
levitate-pci = { path = "../levitate-pci" }
# TEAM_141: Use workspace dependencies for version consistency
virtio-drivers.workspace = true
embedded-graphics.workspace = true
