[package]
name = "levitate-hal"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
# Enable std for running tests on host
std = ["levitate-utils/std"]

[dependencies]
levitate-utils = { path = "../levitate-utils" }
bitflags = "2.4"
fdt = { version = "0.1.5", default-features = false }
