[package]
name = "levitate-hal"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
# Enable std for running tests on host
std = ["levitate-utils/std"]

[dependencies]
levitate-utils = { path = "../levitate-utils" }
# TEAM_103: Removed levitate-virtio dependency - LevitateVirtioHal moved there
bitflags = "2.4"
fdt = { version = "0.1.5", default-features = false }
virtio-drivers = "0.12"
# TEAM_132: Add aarch64-cpu for safe system register and barrier abstractions
aarch64-cpu = "11.2"
# TEAM_133: Add intrusive-collections for safe linked list abstractions
intrusive-collections = "0.10"
