[package]
name = "levitate-hal"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
# Enable std for running tests on host
std = ["levitate-utils/std"]

[dependencies]
levitate-utils = { path = "../levitate-utils" }
# TEAM_141: Use workspace dependencies for version consistency
bitflags.workspace = true
fdt = { version = "0.1.5", default-features = false }
virtio-drivers.workspace = true
aarch64-cpu.workspace = true
intrusive-collections = "0.10"
