[package]
name = "levitate-virtio"
version = "0.1.0"
edition = "2024"
description = "VirtIO transport layer for LevitateOS"

[dependencies]
# TEAM_141: Use workspace dependencies for version consistency
bitflags.workspace = true
aarch64-cpu.workspace = true

[features]
default = []
# TEAM_141: Removed hal-impl feature - committing to virtio-drivers (Option A)

[lints]
workspace = true
