[workspace]
members = ["levbox", "init", "libsyscall", "repro_crash", "shell", "ulib"]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unconditional_panic = "deny"

[workspace.lints.clippy]
# Rule 5 & 6: Safety and Robustness
unwrap_used = "deny"
expect_used = "deny"
missing_safety_doc = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
# Rule 13: Representation - exhaustive matches
match_same_arms = "deny"
# Rule 20: Economy - efficient abstractions
pedantic = { level = "warn", priority = -1 }
# Overrides to reduce noise in bare-metal kernel development
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[profile.release]
panic = "abort"
opt-level = "z"
lto = false
