[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# xtask runs on host, not the kernel target
[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
libc = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
