[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Internal tooling for LevitateOS"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

[lints]
workspace = true
