[package]
name = "levitate-xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
distro-spec = { path = "../distro-spec" }
which = "7"
leviso-cheat-guard = { path = "../testing/cheat-guard" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
