[package]
name = "builder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LevitateOS distribution builder"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[lints]
workspace = true
