[package]
name = "builder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LevitateOS distribution builder"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
