[package]
name = "levitate-kernel"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[lints]
workspace = true

[features]
default = []
verbose = []        # Enable verbose boot messages for golden file testing
diskless = []       # TEAM_065: Skip initrd requirement for diskless boot scenarios
multitask-demo = [] # TEAM_071: Enable demo tasks for preemption verification
verbose-syscalls = [] # TEAM_299: Enable verbose syscall logging

[dependencies]
los_hal = { path = "../hal" }
los_utils = { path = "../utils" }
los_error = { path = "../error" }
los_term = { path = "../term" }
los_pci = { path = "../pci" }
los_gpu = { path = "../gpu" }
linked_list_allocator = "0.10.5"
# TEAM_141: Use workspace dependencies for version consistency
virtio-drivers.workspace = true
embedded-graphics.workspace = true
log = "0.4"
# TEAM_282: Limine boot protocol support (primary boot method)
limine = "0.5"
embedded-sdmmc = { version = "0.9", default-features = false }
ext4-view = { version = "0.9", default-features = false }
bitflags.workspace = true
aarch64-cpu.workspace = true
# TEAM_284: Standard libraries for x86_64 and hardware
x86_64.workspace = true
volatile.workspace = true
bytemuck.workspace = true
acpi.workspace = true
aml.workspace = true
# TEAM_354: ELF dynamic loader - goblin for PIE/relocation support
goblin = { version = "0.8", default-features = false, features = ["elf64", "elf32", "alloc", "endian_fd"] }

[build-dependencies]
cc = "1.0"
