[package]
name = "recart"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
description = "Manage the LevitateOS centralized build artifact store"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LevitateOS/LevitateOS"
homepage = "https://github.com/LevitateOS/LevitateOS"
authors = ["LevitateOS Contributors"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
distro-builder = { path = "../../distro-builder" }
distro-spec = { path = "../../distro-spec" }
leviso = { path = "../../leviso" }
acornos = { path = "../../AcornOS" }
iuppiteros = { path = "../../IuppiterOS" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
