[package]
name = "levbox"
version = "0.1.0"
edition = "2021"
description = "Levbox - busybox-style utilities for LevitateOS"

[lints]
workspace = true

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "pwd"
path = "src/bin/pwd.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/bin/rmdir.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

# TEAM_198: touch utility
[[bin]]
name = "touch"
path = "src/bin/touch.rs"

# TEAM_198: ln utility
[[bin]]
name = "ln"
path = "src/bin/ln.rs"

[dependencies]
libsyscall = { path = "../libsyscall" }
ulib = { path = "../ulib" }
