[package]
name = "nvme"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "NVMe Storage Driver for LevitateOS"

[dependencies]
storage-device = { path = "../../traits/storage-device" }
los_error = { path = "../../error" }
log = "0.4"
zerocopy = { version = "0.7", features = ["derive"] }
