[package]
name = "simple-gpu"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Generic UEFI GOP Framebuffer Driver for LevitateOS"

[dependencies]
los_error = { path = "../../kernel/lib/error" }
los_hal = { path = "../../kernel/lib/hal" }
log = "0.4"
embedded-graphics = { workspace = true }
