# TEAM_380: Simplified workspace - coreutils is now a submodule with its own workspace
# Individual utility crates removed in favor of multi-call binary
# TEAM_380: Added libsyscall and libsyscall-tests for std support
[workspace]
members = [
    "brush",
    "cgull-test",           # TEAM_430: c-gull syscall compatibility test
    "eyra-hello",
    "eyra-test-runner",
    "libsyscall",
    "libsyscall-tests",
    "syscall-conformance",  # TEAM_424: Syscall conformance test suite
]
resolver = "2"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
