[package]
name = "init"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "PID 1 process for LevitateOS"

[lints]
workspace = true

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
# TEAM_404: libsyscall moved to eyra/ directory
libsyscall = { path = "../eyra/libsyscall" }
