[package]
name = "levbox"
version = "0.1.0"
edition = "2021"
description = "Levbox - busybox-style utilities for LevitateOS"

[lints]
workspace = true

[[bin]]
name = "suite_test_core"
path = "src/bin/test/suite_test_core.rs"

[[bin]]
name = "cat"
path = "src/bin/core/cat.rs"

[[bin]]
name = "ls"
path = "src/bin/core/ls.rs"

[[bin]]
name = "pwd"
path = "src/bin/core/pwd.rs"

[[bin]]
name = "cp"
path = "src/bin/core/cp.rs"

[[bin]]
name = "mkdir"
path = "src/bin/core/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/bin/core/rmdir.rs"

[[bin]]
name = "rm"
path = "src/bin/core/rm.rs"

[[bin]]
name = "mv"
path = "src/bin/core/mv.rs"

# TEAM_198: touch utility
[[bin]]
name = "touch"
path = "src/bin/core/touch.rs"

# TEAM_198: ln utility
[[bin]]
name = "ln"
path = "src/bin/core/ln.rs"

# TEAM_243: Test runner for automated testing
[[bin]]
name = "test_runner"
path = "src/bin/test/test_runner.rs"

# TEAM_244: External interrupt test (Ctrl+C simulation)
[[bin]]
name = "interrupt_test"
path = "src/bin/test/interrupt_test.rs"

[[bin]]
name = "clone_test"
path = "src/bin/test/clone_test.rs"

[[bin]]
name = "mmap_test"
path = "src/bin/test/mmap_test.rs"

[[bin]]
name = "pipe_test"
path = "src/bin/test/pipe_test.rs"

[[bin]]
name = "signal_test"
path = "src/bin/test/signal_test.rs"

# TEAM_244: TTY/Terminal tests (TDD)
[[bin]]
name = "tty_test"
path = "src/bin/test/tty_test.rs"

# TEAM_247: PTY tests
[[bin]]
name = "pty_test"
path = "src/bin/test/pty_test.rs"

[[bin]]
name = "pty_interact"
path = "src/bin/test/pty_interact.rs"


[dependencies]
libsyscall = { path = "../libsyscall" }
ulib = { path = "../ulib", features = ["entry"] }
