# TEAM_435: Moved back to crates/userspace/ (eyra removed)
# libsyscall is pure no_std - no external libc dependencies
[package]
name = "libsyscall"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Pure no_std syscall library for LevitateOS userspace"

[lib]

[dependencies]
linux-raw-sys = { version = "0.4", default-features = false, features = ["errno", "general", "ioctl", "no_std"] }
