[package]
name = "systest"
version = "0.1.0"
edition = "2021"
description = "System regression tests for LevitateOS"

[lints]
workspace = true

[dependencies]
libsyscall = { path = "../libsyscall" }
ulib = { path = "../ulib", features = ["entry"] }

[[bin]]
name = "stat_test"
path = "src/bin/stat_test.rs"

[[bin]]
name = "link_test"
path = "src/bin/link_test.rs"

[[bin]]
name = "time_test"
path = "src/bin/time_test.rs"

[[bin]]
name = "sched_yield_test"
path = "src/bin/sched_yield_test.rs"

[[bin]]
name = "error_test"
path = "src/bin/error_test.rs"
