# TEAM_166: Userspace Standard Library for LevitateOS
[package]
name = "ulib"
version = "0.1.0"
edition = "2021"
authors = ["LevitateOS Contributors"]
description = "Userspace standard library for LevitateOS"

[dependencies]
libsyscall = { path = "../libsyscall" }
spin = "0.10.0"

[features]
default = []
# Enable ulib-provided _start entry point (apps just define main())
entry = []

[lints]
workspace = true
