# TEAM_394: Brush shell for LevitateOS
# TEAM_404: Simplified shell with raw syscalls for process spawning
[package]
name = "brush"
version = "0.1.0"
edition = "2021"
description = "LevitateOS shell with Eyra std support"

[dependencies]
# TEAM_395: Official Eyra pattern - rename to std for native std support
std = { package = "eyra", version = "0.22", features = ["experimental-relocate"] }

# TEAM_404: libsyscall for spawn_args (raw syscalls work with Eyra)
libsyscall = { path = "../libsyscall" }

[[bin]]
name = "brush"
path = "src/main.rs"
