# TEAM_364: uutils-based cat for LevitateOS
[package]
name = "cat"
version = "0.2.0"
edition = "2021"
description = "GNU-compatible cat from uutils-coreutils"

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }
uu_cat = "0.2.2"

# TEAM_367: Fixed - added build.rs with -nostartfiles
