[package]
name = "cgull-test"
version = "0.1.0"
edition = "2021"
description = "Comprehensive syscall test for c-gull/Eyra compatibility"

# TEAM_430: Test syscalls that c-gull needs for general purpose OS
[dependencies]
std = { package = "eyra", version = "0.22", features = ["experimental-relocate"] }

[features]
default = []
test_threads = []
test_fs = []
test_net = []
