# TEAM_367: uutils-based echo for LevitateOS
# Fixed linker conflict by adding build.rs with -nostartfiles
[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }
uu_echo = "0.2"

# TEAM_367: Fixed - added build.rs with -nostartfiles
